--- a/css/bswe.css
+++ b/css/bswe.css
@@ -21,6 +21,77 @@ body {
   background-image: none;
   color: #333;
   font-family: Cabin, Arial, sans-serif;
+    /* this is for the accordion menu, out of commission for now
+    .widget_taxonomy_list_widget {
+        position: relative;
+
+        h4 {
+            background: $bgcolor-2;
+            color: $text-color-2;
+            cursor: pointer;
+            font: {
+                family: $main-font;
+                size: 18px;
+                weight: bold;
+            }
+            padding: 10px;
+            line-height: 1em;
+            text-align: left;
+
+            @media screen and (min-width: $medium) {
+                font-size: 14px;
+            }
+
+            @media screen and (min-width: $medium) and (max-width: $medium-large) {
+                text-align: center;
+            }
+        }
+
+        span {
+            cursor: pointer;
+            width: 0;
+            height: 0;
+            position: absolute;
+            right: 10px;
+
+            &.open {
+                border-left: 12px solid transparent;
+                border-right: 12px solid transparent;
+                border-top: 12px solid $text-color-2;
+                top: 13px;
+
+                @media screen and (min-width: $medium) {
+                    border-left-width: 7px;
+                    border-right-width: 7px;
+                    border-top-width: 7px;
+                    top: 12px;
+                }
+            }
+
+            &.closed {
+                border-top: 12px solid transparent;
+                border-bottom: 12px solid transparent;
+                border-left: 12px solid $text-color-2;
+                top: 6px;
+
+                @media screen and (min-width: $medium) {
+                    border-top-width: 7px;
+                    border-bottom-width: 7px;
+                    border-left-width: 7px;
+                    top: 8px;
+                }
+            }
+
+            @media screen and (min-width: $medium) and (max-width: $medium-large) {
+                display: none;
+            }            
+        }
+        
+        
+        ul {
+            display: none;
+        }
+    }*/
 }
 /* line 76, ../../sass/_bswe.scss */
 body p {
@@ -365,17 +436,25 @@ body #sidebar,
 body #sidebar-alt {
   text-align: center;
 }
-/* line 428, ../../sass/_bswe.scss */
-body #sidebar .widget_recent_comments a {
+/* line 429, ../../sass/_bswe.scss */
+body #sidebar .widget_recent_comments a,
+body #sidebar-alt .widget_recent_comments a {
   font-style: italic;
   text-decoration: underline;
 }
-/* line 432, ../../sass/_bswe.scss */
-body #sidebar .widget_recent_comments a:hover {
+/* line 433, ../../sass/_bswe.scss */
+body #sidebar .widget_recent_comments a:hover,
+body #sidebar-alt .widget_recent_comments a:hover {
   text-decoration: none;
 }
-/* line 437, ../../sass/_bswe.scss */
-body #sidebar .widget_recent_comments h4 {
+/* line 438, ../../sass/_bswe.scss */
+body #sidebar .widget_recent_comments li,
+body #sidebar-alt .widget_recent_comments li {
+  text-align: left;
+}
+/* line 444, ../../sass/_bswe.scss */
+body #sidebar h4.widgettitle,
+body #sidebar-alt h4.widgettitle {
   background: #000;
   color: #fff;
   font-family: Cabin, Arial, sans-serif;
@@ -384,146 +463,65 @@ body #sidebar .widget_recent_comments h4 {
   line-height: 1em;
   padding: 7px;
 }
-/* line 449, ../../sass/_bswe.scss */
-body #sidebar .widget_recent_comments li {
-  text-align: left;
-}
 @media screen and (max-width: 760px) {
-  /* line 454, ../../sass/_bswe.scss */
-  body #sidebar .sidebar_newsletter {
+  /* line 457, ../../sass/_bswe.scss */
+  body #sidebar .sidebar_newsletter,
+  body #sidebar-alt .sidebar_newsletter {
     display: none;
   }
 }
-/* line 461, ../../sass/_bswe.scss */
+/* line 464, ../../sass/_bswe.scss */
 body .sidebar-ads {
   clear: both;
   text-align: center;
 }
-/* line 466, ../../sass/_bswe.scss */
+/* line 469, ../../sass/_bswe.scss */
 body .sidebar-ads img.desktop-tablet-ad-img, body .sidebar-ads img.mobile-ad-img {
   display: none;
 }
 @media screen and (min-width: 760px) {
-  /* line 471, ../../sass/_bswe.scss */
+  /* line 474, ../../sass/_bswe.scss */
   body .sidebar-ads img.desktop-tablet-ad-img {
     display: inline-block;
   }
 }
 @media screen and (max-width: 760px) {
-  /* line 477, ../../sass/_bswe.scss */
+  /* line 480, ../../sass/_bswe.scss */
   body .sidebar-ads img.mobile-ad-img {
     display: inline-block;
   }
 }
-/* line 485, ../../sass/_bswe.scss */
+/* line 488, ../../sass/_bswe.scss */
 body .social_icons {
   margin-bottom: 10px;
 }
-/* line 488, ../../sass/_bswe.scss */
+/* line 491, ../../sass/_bswe.scss */
 body .social_icons p {
   position: relative;
 }
-/* line 491, ../../sass/_bswe.scss */
+/* line 494, ../../sass/_bswe.scss */
 body .social_icons p span {
   font-size: 17px;
   position: absolute;
   left: 99px;
   top: 6px;
 }
-/* line 501, ../../sass/_bswe.scss */
-body .widget_taxonomy_list_widget {
-  position: relative;
-}
-/* line 504, ../../sass/_bswe.scss */
-body .widget_taxonomy_list_widget h4 {
-  background: #000;
-  color: #fff;
-  cursor: pointer;
-  font-family: Cabin, Arial, sans-serif;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px;
-  line-height: 1em;
-  text-align: left;
-}
-@media screen and (min-width: 760px) {
-  /* line 504, ../../sass/_bswe.scss */
-  body .widget_taxonomy_list_widget h4 {
-    font-size: 14px;
-  }
-}
-@media screen and (min-width: 760px) and (max-width: 850px) {
-  /* line 504, ../../sass/_bswe.scss */
-  body .widget_taxonomy_list_widget h4 {
-    text-align: center;
-  }
-}
-/* line 526, ../../sass/_bswe.scss */
-body .widget_taxonomy_list_widget span {
-  cursor: pointer;
-  width: 0;
-  height: 0;
-  position: absolute;
-  right: 10px;
-}
-/* line 533, ../../sass/_bswe.scss */
-body .widget_taxonomy_list_widget span.open {
-  border-left: 12px solid transparent;
-  border-right: 12px solid transparent;
-  border-top: 12px solid #fff;
-  top: 13px;
-}
-@media screen and (min-width: 760px) {
-  /* line 533, ../../sass/_bswe.scss */
-  body .widget_taxonomy_list_widget span.open {
-    border-left-width: 7px;
-    border-right-width: 7px;
-    border-top-width: 7px;
-    top: 12px;
-  }
-}
-/* line 547, ../../sass/_bswe.scss */
-body .widget_taxonomy_list_widget span.closed {
-  border-top: 12px solid transparent;
-  border-bottom: 12px solid transparent;
-  border-left: 12px solid #fff;
-  top: 6px;
-}
-@media screen and (min-width: 760px) {
-  /* line 547, ../../sass/_bswe.scss */
-  body .widget_taxonomy_list_widget span.closed {
-    border-top-width: 7px;
-    border-bottom-width: 7px;
-    border-left-width: 7px;
-    top: 8px;
-  }
-}
-@media screen and (min-width: 760px) and (max-width: 850px) {
-  /* line 526, ../../sass/_bswe.scss */
-  body .widget_taxonomy_list_widget span {
-    display: none;
-  }
-}
-/* line 567, ../../sass/_bswe.scss */
-body .widget_taxonomy_list_widget ul {
-  display: none;
-}
-/* line 572, ../../sass/_bswe.scss */
+/* line 576, ../../sass/_bswe.scss */
 body .writer_promo {
   background-color: #f2ee8b;
   padding: 10px;
   border: #000 1px solid;
 }
-/* line 577, ../../sass/_bswe.scss */
+/* line 581, ../../sass/_bswe.scss */
 body .writer_promo h2 {
   margin-top: 0;
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 582, ../../sass/_bswe.scss */
+/* line 586, ../../sass/_bswe.scss */
 body .writer_promo h4 {
   margin: 0;
 }
-/* line 588, ../../sass/_bswe.scss */
+/* line 592, ../../sass/_bswe.scss */
 body .yarpp-related legend {
   font-size: 18px;
   font-weight: bold;
