--- a/css/bswe.css
+++ b/css/bswe.css
@@ -169,63 +169,67 @@ body #headerwrap #header {
 body #headerwrap #header hgroup {
   padding-left: 66px;
 }
+/* line 167, ../../sass/_bswe.scss */
+body #headerwrap #header a#advertise-link {
+  color: #9CCFEE;
+}
 @media screen and (max-width: 480px) {
-  /* line 166, ../../sass/_bswe.scss */
+  /* line 172, ../../sass/_bswe.scss */
   body #headerwrap #header #searchform-wrap {
     position: relative;
   }
 }
-/* line 172, ../../sass/_bswe.scss */
+/* line 178, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo,
 body #headerwrap #header #site-description {
   width: 300px;
 }
 @media screen and (max-width: 600px) {
-  /* line 172, ../../sass/_bswe.scss */
+  /* line 178, ../../sass/_bswe.scss */
   body #headerwrap #header #site-logo,
   body #headerwrap #header #site-description {
     width: 212px;
   }
 }
-/* line 182, ../../sass/_bswe.scss */
+/* line 188, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo {
   padding-top: 0;
   top: 0;
 }
-/* line 186, ../../sass/_bswe.scss */
+/* line 192, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo a {
   color: #9CCFEE;
   font-family: SkinBones, sans-serif, Arial, Helvetica;
   font-size: 44px;
   font-style: normal;
 }
-/* line 194, ../../sass/_bswe.scss */
+/* line 200, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo a span {
   display: block;
   line-height: 1em;
 }
 @media screen and (max-width: 600px) {
-  /* line 186, ../../sass/_bswe.scss */
+  /* line 192, ../../sass/_bswe.scss */
   body #headerwrap #header #site-logo a {
     font-size: 38px;
   }
 }
-/* line 205, ../../sass/_bswe.scss */
+/* line 211, ../../sass/_bswe.scss */
 body #headerwrap #header #site-description {
   color: #fff;
   top: 94px;
 }
-/* line 212, ../../sass/_bswe.scss */
+/* line 218, ../../sass/_bswe.scss */
 body #headerwrap #header .social-widget .rss a {
   color: #fff;
 }
 @media screen and (min-width: 760px) and (max-width: 850px) {
-  /* line 219, ../../sass/_bswe.scss */
+  /* line 225, ../../sass/_bswe.scss */
   body #headerwrap #header #text-13 img {
     max-width: 400px;
   }
 }
-/* line 227, ../../sass/_bswe.scss */
+/* line 233, ../../sass/_bswe.scss */
 body #headerwrap #text-16 {
   color: #fff;
   font-style: italic;
@@ -233,51 +237,51 @@ body #headerwrap #text-16 {
   max-width: 970px;
   padding: 10px 3% 0;
 }
-/* line 234, ../../sass/_bswe.scss */
+/* line 240, ../../sass/_bswe.scss */
 body #headerwrap #text-16 a {
   color: #fff;
 }
-/* line 239, ../../sass/_bswe.scss */
+/* line 245, ../../sass/_bswe.scss */
 body #headerwrap #main-nav {
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 242, ../../sass/_bswe.scss */
+/* line 248, ../../sass/_bswe.scss */
 body #headerwrap #main-nav a {
   color: #fff;
   min-height: 20px;
 }
 @media screen and (max-width: 480px) {
-  /* line 242, ../../sass/_bswe.scss */
+  /* line 248, ../../sass/_bswe.scss */
   body #headerwrap #main-nav a {
     color: #333;
   }
 }
 @media screen and (max-width: 520px) {
-  /* line 242, ../../sass/_bswe.scss */
+  /* line 248, ../../sass/_bswe.scss */
   body #headerwrap #main-nav a {
     font-size: 13px;
   }
 }
-/* line 257, ../../sass/_bswe.scss */
+/* line 263, ../../sass/_bswe.scss */
 body #headerwrap #main-nav .current_page_item a {
   color: #fff;
 }
-/* line 263, ../../sass/_bswe.scss */
+/* line 269, ../../sass/_bswe.scss */
 body #headerwrap #top-nav {
   float: right;
   padding: 0;
 }
-/* line 268, ../../sass/_bswe.scss */
+/* line 274, ../../sass/_bswe.scss */
 body #headerwrap #top-nav li:last-child {
   margin-right: 0;
 }
 @media screen and (max-width: 760px) {
-  /* line 275, ../../sass/_bswe.scss */
+  /* line 281, ../../sass/_bswe.scss */
   body .hide-mobile {
     display: none;
   }
 }
-/* line 281, ../../sass/_bswe.scss */
+/* line 287, ../../sass/_bswe.scss */
 body .homepage-signup,
 body .sidebar_newsletter,
 body .article-bottom-signup {
@@ -287,13 +291,13 @@ body .article-bottom-signup {
   text-align: left;
   margin-bottom: 15px;
 }
-/* line 290, ../../sass/_bswe.scss */
+/* line 296, ../../sass/_bswe.scss */
 body .homepage-signup em,
 body .sidebar_newsletter em,
 body .article-bottom-signup em {
   color: #333;
 }
-/* line 294, ../../sass/_bswe.scss */
+/* line 300, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .homepage-signup h4,
 body .sidebar_newsletter h3,
@@ -305,7 +309,7 @@ body .article-bottom-signup h4 {
   margin: 0 0 15px;
   background: none;
 }
-/* line 304, ../../sass/_bswe.scss */
+/* line 310, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .sidebar_newsletter h3,
 body .article-bottom-signup h3 {
@@ -316,13 +320,13 @@ body .article-bottom-signup h3 {
   padding: 10px;
   line-height: 1.2em;
 }
-/* line 314, ../../sass/_bswe.scss */
+/* line 320, ../../sass/_bswe.scss */
 body .homepage-signup h3 em,
 body .sidebar_newsletter h3 em,
 body .article-bottom-signup h3 em {
   color: #fff;
 }
-/* line 319, ../../sass/_bswe.scss */
+/* line 325, ../../sass/_bswe.scss */
 body .homepage-signup h4,
 body .sidebar_newsletter h4,
 body .article-bottom-signup h4 {
@@ -330,7 +334,7 @@ body .article-bottom-signup h4 {
   padding: 5px;
   border: 1px solid #000;
 }
-/* line 325, ../../sass/_bswe.scss */
+/* line 331, ../../sass/_bswe.scss */
 body .homepage-signup input[type=text],
 body .sidebar_newsletter input[type=text],
 body .article-bottom-signup input[type=text] {
@@ -339,120 +343,124 @@ body .article-bottom-signup input[type=text] {
   padding: 5px;
   margin: 0 0 10px;
 }
-/* line 332, ../../sass/_bswe.scss */
+/* line 338, ../../sass/_bswe.scss */
 body .homepage-signup input[type=submit],
 body .sidebar_newsletter input[type=submit],
 body .article-bottom-signup input[type=submit] {
   color: #fff;
   background-color: #2b7534;
 }
-/* line 338, ../../sass/_bswe.scss */
+/* line 344, ../../sass/_bswe.scss */
 body .img-container {
   max-height: 120px;
   overflow: hidden;
   margin-bottom: 5px;
 }
 @media screen and (max-width: 480px) {
-  /* line 338, ../../sass/_bswe.scss */
+  /* line 344, ../../sass/_bswe.scss */
   body .img-container {
     text-align: center;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 348, ../../sass/_bswe.scss */
+  /* line 354, ../../sass/_bswe.scss */
   body .img-container figure.left {
     float: none;
   }
 }
-/* line 356, ../../sass/_bswe.scss */
+/* line 362, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post,
 body .loops-wrapper.grid3 .post,
 body .loops-wrapper.grid4 .post {
   clear: none;
 }
-/* line 361, ../../sass/_bswe.scss */
+/* line 367, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post .post-title,
 body .loops-wrapper.grid3 .post .post-title,
 body .loops-wrapper.grid4 .post .post-title {
   clear: both;
 }
-/* line 368, ../../sass/_bswe.scss */
+/* line 374, ../../sass/_bswe.scss */
 body #loops-wrapper .sidebar-ads,
 body article .sidebar-ads {
   margin-bottom: 10px;
 }
 @media screen and (min-width: 760px) {
-  /* line 368, ../../sass/_bswe.scss */
+  /* line 374, ../../sass/_bswe.scss */
   body #loops-wrapper .sidebar-ads,
   body article .sidebar-ads {
     display: none;
   }
 }
-/* line 377, ../../sass/_bswe.scss */
+/* line 383, ../../sass/_bswe.scss */
 body .mobile-ad {
   display: none;
   text-align: center;
   margin-bottom: 10px;
 }
 @media screen and (max-width: 480px) {
-  /* line 377, ../../sass/_bswe.scss */
+  /* line 383, ../../sass/_bswe.scss */
   body .mobile-ad {
     display: block;
   }
 }
-/* line 387, ../../sass/_bswe.scss */
+/* line 393, ../../sass/_bswe.scss */
 body #nav-bar {
   min-height: inherit;
 }
 @media screen and (max-width: 600px) {
-  /* line 390, ../../sass/_bswe.scss */
+  /* line 396, ../../sass/_bswe.scss */
   body #nav-bar ul {
     display: none;
   }
 }
-/* line 396, ../../sass/_bswe.scss */
+/* line 402, ../../sass/_bswe.scss */
 body #nav-bar .jrsm-0 {
   margin-bottom: 10px;
   font-size: 16px;
 }
-/* line 402, ../../sass/_bswe.scss */
+/* line 408, ../../sass/_bswe.scss */
 body .post-author {
   color: #333;
   font-style: normal;
   font-weight: bold;
 }
-/* line 410, ../../sass/_bswe.scss */
+/* line 416, ../../sass/_bswe.scss */
 body .post {
   margin-bottom: 0;
 }
 @media screen and (max-width: 480px) {
-  /* line 413, ../../sass/_bswe.scss */
+  /* line 419, ../../sass/_bswe.scss */
   body .post .post-content {
     clear: both;
   }
 }
-/* line 420, ../../sass/_bswe.scss */
+/* line 424, ../../sass/_bswe.scss */
+body .post .post-content li {
+  font-size: 14px;
+}
+/* line 430, ../../sass/_bswe.scss */
 body #sidebar,
 body #sidebar-alt {
   text-align: center;
 }
-/* line 429, ../../sass/_bswe.scss */
+/* line 439, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a,
 body #sidebar-alt .widget_recent_comments a {
   font-style: italic;
   text-decoration: underline;
 }
-/* line 433, ../../sass/_bswe.scss */
+/* line 443, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a:hover,
 body #sidebar-alt .widget_recent_comments a:hover {
   text-decoration: none;
 }
-/* line 438, ../../sass/_bswe.scss */
+/* line 448, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments li,
 body #sidebar-alt .widget_recent_comments li {
   text-align: left;
 }
-/* line 444, ../../sass/_bswe.scss */
+/* line 454, ../../sass/_bswe.scss */
 body #sidebar h4.widgettitle,
 body #sidebar-alt h4.widgettitle {
   background: #000;
@@ -464,64 +472,68 @@ body #sidebar-alt h4.widgettitle {
   padding: 7px;
 }
 @media screen and (max-width: 760px) {
-  /* line 457, ../../sass/_bswe.scss */
+  /* line 467, ../../sass/_bswe.scss */
   body #sidebar .sidebar_newsletter,
   body #sidebar-alt .sidebar_newsletter {
     display: none;
   }
 }
-/* line 464, ../../sass/_bswe.scss */
+/* line 474, ../../sass/_bswe.scss */
 body .sidebar-ads {
   clear: both;
   text-align: center;
 }
-/* line 469, ../../sass/_bswe.scss */
+/* line 479, ../../sass/_bswe.scss */
 body .sidebar-ads img.desktop-tablet-ad-img, body .sidebar-ads img.mobile-ad-img {
   display: none;
 }
 @media screen and (min-width: 760px) {
-  /* line 474, ../../sass/_bswe.scss */
+  /* line 484, ../../sass/_bswe.scss */
   body .sidebar-ads img.desktop-tablet-ad-img {
     display: inline-block;
   }
 }
 @media screen and (max-width: 760px) {
-  /* line 480, ../../sass/_bswe.scss */
+  /* line 490, ../../sass/_bswe.scss */
   body .sidebar-ads img.mobile-ad-img {
     display: inline-block;
   }
 }
-/* line 488, ../../sass/_bswe.scss */
+/* line 498, ../../sass/_bswe.scss */
 body .social_icons {
   margin-bottom: 10px;
 }
-/* line 491, ../../sass/_bswe.scss */
+/* line 501, ../../sass/_bswe.scss */
 body .social_icons p {
   position: relative;
 }
-/* line 494, ../../sass/_bswe.scss */
+/* line 504, ../../sass/_bswe.scss */
 body .social_icons p span {
   font-size: 17px;
   position: absolute;
   left: 99px;
   top: 6px;
 }
-/* line 576, ../../sass/_bswe.scss */
+/* line 586, ../../sass/_bswe.scss */
 body .writer_promo {
   background-color: #f2ee8b;
   padding: 10px;
   border: #000 1px solid;
 }
-/* line 581, ../../sass/_bswe.scss */
+/* line 591, ../../sass/_bswe.scss */
 body .writer_promo h2 {
   margin-top: 0;
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 586, ../../sass/_bswe.scss */
+/* line 596, ../../sass/_bswe.scss */
 body .writer_promo h4 {
   margin: 0;
 }
-/* line 592, ../../sass/_bswe.scss */
+/* line 602, ../../sass/_bswe.scss */
+body .yarpp-related a {
+  font-weight: normal;
+}
+/* line 606, ../../sass/_bswe.scss */
 body .yarpp-related legend {
   font-size: 18px;
   font-weight: bold;
