--- a/css/bswe.css
+++ b/css/bswe.css
@@ -275,13 +275,18 @@ body #headerwrap #top-nav {
 body #headerwrap #top-nav li:last-child {
   margin-right: 0;
 }
+/* line 278, ../../sass/_bswe.scss */
+body #headerwrap #top-nav li a {
+  color: #9ccfee;
+  font-weight: bold;
+}
 @media screen and (max-width: 760px) {
-  /* line 281, ../../sass/_bswe.scss */
+  /* line 286, ../../sass/_bswe.scss */
   body .hide-mobile {
     display: none;
   }
 }
-/* line 287, ../../sass/_bswe.scss */
+/* line 292, ../../sass/_bswe.scss */
 body .homepage-signup,
 body .sidebar_newsletter,
 body .article-bottom-signup {
@@ -291,13 +296,13 @@ body .article-bottom-signup {
   text-align: left;
   margin-bottom: 15px;
 }
-/* line 296, ../../sass/_bswe.scss */
+/* line 301, ../../sass/_bswe.scss */
 body .homepage-signup em,
 body .sidebar_newsletter em,
 body .article-bottom-signup em {
   color: #333;
 }
-/* line 300, ../../sass/_bswe.scss */
+/* line 305, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .homepage-signup h4,
 body .sidebar_newsletter h3,
@@ -309,7 +314,7 @@ body .article-bottom-signup h4 {
   margin: 0 0 15px;
   background: none;
 }
-/* line 310, ../../sass/_bswe.scss */
+/* line 315, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .sidebar_newsletter h3,
 body .article-bottom-signup h3 {
@@ -320,13 +325,13 @@ body .article-bottom-signup h3 {
   padding: 10px;
   line-height: 1.2em;
 }
-/* line 320, ../../sass/_bswe.scss */
+/* line 325, ../../sass/_bswe.scss */
 body .homepage-signup h3 em,
 body .sidebar_newsletter h3 em,
 body .article-bottom-signup h3 em {
   color: #fff;
 }
-/* line 325, ../../sass/_bswe.scss */
+/* line 330, ../../sass/_bswe.scss */
 body .homepage-signup h4,
 body .sidebar_newsletter h4,
 body .article-bottom-signup h4 {
@@ -334,7 +339,7 @@ body .article-bottom-signup h4 {
   padding: 5px;
   border: 1px solid #000;
 }
-/* line 331, ../../sass/_bswe.scss */
+/* line 336, ../../sass/_bswe.scss */
 body .homepage-signup input[type=text],
 body .sidebar_newsletter input[type=text],
 body .article-bottom-signup input[type=text] {
@@ -343,124 +348,125 @@ body .article-bottom-signup input[type=text] {
   padding: 5px;
   margin: 0 0 10px;
 }
-/* line 338, ../../sass/_bswe.scss */
+/* line 343, ../../sass/_bswe.scss */
 body .homepage-signup input[type=submit],
 body .sidebar_newsletter input[type=submit],
 body .article-bottom-signup input[type=submit] {
   color: #fff;
   background-color: #2b7534;
 }
-/* line 344, ../../sass/_bswe.scss */
+/* line 349, ../../sass/_bswe.scss */
 body .img-container {
   max-height: 120px;
   overflow: hidden;
   margin-bottom: 5px;
 }
 @media screen and (max-width: 480px) {
-  /* line 344, ../../sass/_bswe.scss */
+  /* line 349, ../../sass/_bswe.scss */
   body .img-container {
     text-align: center;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 354, ../../sass/_bswe.scss */
+  /* line 359, ../../sass/_bswe.scss */
   body .img-container figure.left {
     float: none;
   }
 }
-/* line 362, ../../sass/_bswe.scss */
+/* line 367, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post,
 body .loops-wrapper.grid3 .post,
 body .loops-wrapper.grid4 .post {
   clear: none;
 }
-/* line 367, ../../sass/_bswe.scss */
+/* line 372, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post .post-title,
 body .loops-wrapper.grid3 .post .post-title,
 body .loops-wrapper.grid4 .post .post-title {
   clear: both;
 }
-/* line 374, ../../sass/_bswe.scss */
+/* line 379, ../../sass/_bswe.scss */
 body #loops-wrapper .sidebar-ads,
 body article .sidebar-ads {
   margin-bottom: 10px;
 }
 @media screen and (min-width: 760px) {
-  /* line 374, ../../sass/_bswe.scss */
+  /* line 379, ../../sass/_bswe.scss */
   body #loops-wrapper .sidebar-ads,
   body article .sidebar-ads {
     display: none;
   }
 }
-/* line 383, ../../sass/_bswe.scss */
+/* line 388, ../../sass/_bswe.scss */
 body .mobile-ad {
   display: none;
   text-align: center;
   margin-bottom: 10px;
 }
 @media screen and (max-width: 480px) {
-  /* line 383, ../../sass/_bswe.scss */
+  /* line 388, ../../sass/_bswe.scss */
   body .mobile-ad {
     display: block;
   }
 }
-/* line 393, ../../sass/_bswe.scss */
+/* line 398, ../../sass/_bswe.scss */
 body #nav-bar {
   min-height: inherit;
+  padding-top: 4px;
 }
 @media screen and (max-width: 600px) {
-  /* line 396, ../../sass/_bswe.scss */
+  /* line 402, ../../sass/_bswe.scss */
   body #nav-bar ul {
     display: none;
   }
 }
-/* line 402, ../../sass/_bswe.scss */
+/* line 408, ../../sass/_bswe.scss */
 body #nav-bar .jrsm-0 {
   margin-bottom: 10px;
   font-size: 16px;
 }
-/* line 408, ../../sass/_bswe.scss */
+/* line 414, ../../sass/_bswe.scss */
 body .post-author {
   color: #333;
   font-style: normal;
   font-weight: bold;
 }
-/* line 416, ../../sass/_bswe.scss */
+/* line 422, ../../sass/_bswe.scss */
 body .post {
   margin-bottom: 0;
 }
 @media screen and (max-width: 480px) {
-  /* line 419, ../../sass/_bswe.scss */
+  /* line 425, ../../sass/_bswe.scss */
   body .post .post-content {
     clear: both;
   }
 }
-/* line 424, ../../sass/_bswe.scss */
+/* line 430, ../../sass/_bswe.scss */
 body .post .post-content li {
   font-size: 14px;
 }
-/* line 430, ../../sass/_bswe.scss */
+/* line 436, ../../sass/_bswe.scss */
 body #sidebar,
 body #sidebar-alt {
   text-align: center;
 }
-/* line 439, ../../sass/_bswe.scss */
+/* line 445, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a,
 body #sidebar-alt .widget_recent_comments a {
   font-style: italic;
   text-decoration: underline;
 }
-/* line 443, ../../sass/_bswe.scss */
+/* line 449, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a:hover,
 body #sidebar-alt .widget_recent_comments a:hover {
   text-decoration: none;
 }
-/* line 448, ../../sass/_bswe.scss */
+/* line 454, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments li,
 body #sidebar-alt .widget_recent_comments li {
   text-align: left;
 }
-/* line 454, ../../sass/_bswe.scss */
+/* line 460, ../../sass/_bswe.scss */
 body #sidebar h4.widgettitle,
 body #sidebar-alt h4.widgettitle {
   background: #000;
@@ -472,68 +478,78 @@ body #sidebar-alt h4.widgettitle {
   padding: 7px;
 }
 @media screen and (max-width: 760px) {
-  /* line 467, ../../sass/_bswe.scss */
+  /* line 473, ../../sass/_bswe.scss */
   body #sidebar .sidebar_newsletter,
   body #sidebar-alt .sidebar_newsletter {
     display: none;
   }
 }
-/* line 474, ../../sass/_bswe.scss */
+/* line 480, ../../sass/_bswe.scss */
 body .sidebar-ads {
   clear: both;
   text-align: center;
 }
-/* line 479, ../../sass/_bswe.scss */
+/* line 485, ../../sass/_bswe.scss */
 body .sidebar-ads img.desktop-tablet-ad-img, body .sidebar-ads img.mobile-ad-img {
   display: none;
 }
 @media screen and (min-width: 760px) {
-  /* line 484, ../../sass/_bswe.scss */
+  /* line 490, ../../sass/_bswe.scss */
   body .sidebar-ads img.desktop-tablet-ad-img {
     display: inline-block;
   }
 }
 @media screen and (max-width: 760px) {
-  /* line 490, ../../sass/_bswe.scss */
+  /* line 496, ../../sass/_bswe.scss */
   body .sidebar-ads img.mobile-ad-img {
     display: inline-block;
   }
 }
-/* line 498, ../../sass/_bswe.scss */
+/* line 504, ../../sass/_bswe.scss */
 body .social_icons {
   margin-bottom: 10px;
 }
-/* line 501, ../../sass/_bswe.scss */
+/* line 507, ../../sass/_bswe.scss */
 body .social_icons p {
   position: relative;
 }
-/* line 504, ../../sass/_bswe.scss */
+/* line 510, ../../sass/_bswe.scss */
 body .social_icons p span {
   font-size: 17px;
   position: absolute;
   left: 99px;
   top: 6px;
 }
-/* line 586, ../../sass/_bswe.scss */
+/* line 520, ../../sass/_bswe.scss */
+body .top-text-ad {
+  padding-bottom: 7px;
+}
+/* line 523, ../../sass/_bswe.scss */
+body .top-text-ad a {
+  color: #fff;
+  font-style: italic;
+  font-size: 14px;
+}
+/* line 602, ../../sass/_bswe.scss */
 body .writer_promo {
   background-color: #f2ee8b;
   padding: 10px;
   border: #000 1px solid;
 }
-/* line 591, ../../sass/_bswe.scss */
+/* line 607, ../../sass/_bswe.scss */
 body .writer_promo h2 {
   margin-top: 0;
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 596, ../../sass/_bswe.scss */
+/* line 612, ../../sass/_bswe.scss */
 body .writer_promo h4 {
   margin: 0;
 }
-/* line 602, ../../sass/_bswe.scss */
+/* line 618, ../../sass/_bswe.scss */
 body .yarpp-related a {
   font-weight: normal;
 }
-/* line 606, ../../sass/_bswe.scss */
+/* line 622, ../../sass/_bswe.scss */
 body .yarpp-related legend {
   font-size: 18px;
   font-weight: bold;
