adding spacing below writer promo box

--- a/responz-new/dev/sass/_bswe.scss
+++ b/responz-new/dev/sass/_bswe.scss
@@ -633,6 +633,7 @@ body {
         background-color: $bgcolor-5;
         padding: 10px;
         border: $general-outline 1px solid;
+        margin-bottom: 10px;
 
         h2 {
             margin-top: 0;
