--- a/responz-new/dev/sass/_bswe.scss
+++ b/responz-new/dev/sass/_bswe.scss
@@ -633,7 +633,7 @@ body {
         background-color: $bgcolor-5;
         padding: 10px;
         border: $general-outline 1px solid;
-        margin-bottom: 10px;
+        margin: 10px 0;
 
         h2 {
             margin-top: 0;
